# sfa-bench

./: .dockerignore  .gitattributes  .gitignore  CHANGELOG.md  CITATION.cff  LICENSE  Makefile  README.md  adapter_demo.py  adversarial_candidate_suite.py  agent_demo.py  autolab_controller_demo.py  autolab_runner_demo.py  campaign_capture_check.py  campaign_capture_cli.py  campaign_cli.py  campaign_cohort_closure_cli.py  campaign_protocol_check.py  campaign_ratification_cli.py  candidate_evidence_cli.py  candidate_integrity_check.py  causal_report.py  circuit_breakers_demo.py  deferred_consequence.py  external_candidate_demo.py  external_candidate_harness.py  families.json  fingerprint_report.py  frozen_zone_check.py  history_config.json  invariant_suite.py  lineage_demo.py  loop_controller_demo.py  meta_ledger_demo.py  migrate.py  openai_capture_cli.py  openai_gpt56_r2.py  openai_gpt56_r2_single_request.py  openai_gpt56_replication.py  openai_gpt56_tier_pilot.py  (+21 more)
autolab/: __init__.py  circuit_breakers.py  controller.py  frozen_manifest.json  frozen_zone.py  lineage.py  meta_ledger.py  preregistration.py  promotion.py  ratification.py  runner.py
docs/: adversarial-candidate-suite.md  architecture-stack.md  autolab-circuit-breakers.md  autolab-controller.md  autolab-frozen-zone.md  autolab-item-7-runner.md  autolab-lineage.md  autolab-loop-controller.md  autolab-meta-ledger.md  autolab-preregistration.md  autolab-promotion-rollback.md  autolab-ratification.md  autolab-runner.md  campaign-cohort-closure-and-replication.md  campaign-evidence-ratification.md  causal-edges.md  (+24 more)
(+321 files in other folders)
